// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
  disabled={false}
>
  <input
    checked={true}
    className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
    id={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
    fontSize="0.876em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0px"
  >
    Checkbox
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
    disabled={false}
  >
    <input
      checked={true}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Checked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Unchecked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gUvYIV"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gsIDVt"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Error
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 flPALf"
    disabled={true}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gXukOn"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gughwT"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (2 Columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 eTxJUf Checkbox__CheckboxWrapper-sc-1gwp7am-0 cfHVch"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA Checkbox__InputGroup-sc-1gwp7am-3 LNZza"
            id={null}
            rows={null}
          >
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
                id="Checkbox-1"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="Checkbox-1"
                letterSpacing="0px"
              >
                Checkbox 1
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
                id="Checkbox-2"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="Checkbox-2"
                letterSpacing="0px"
              >
                Checkbox 2
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
                id="Checkbox-3"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="Checkbox-3"
                letterSpacing="0px"
              >
                Checkbox 3
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 kKsGVj"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
                id="Checkbox-4"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="Checkbox-4"
                letterSpacing="0px"
              >
                Checkbox 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</section>
`;
